# Spin-washer-Track

./: CMakeLists.txt  README.md  WashingMachineSystem  log.txt
src/: Scheduler.cpp  Scheduler.h  User.cpp  User.h  WashingMachine.cpp  WashingMachine.h  main.cpp  utils.h
web/: app.js  env-config.js  index.html  styles.css
